--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,11 @@
   border: none;
   color: var(--body-color);
   font-size: 20px;
+  transition: 0.3s ease;
+}
+
+.btn:hover {
+  transform: scale(1.04);
 }
 .section-title {
   font-size: 46px;
@@ -217,7 +222,46 @@ nav {
   clip-path: circle();
   background-color: var(--primary-color);
 }
-/* Our Stories */
+
+/* Updates ------->>>> */
+#marquee {
+  width: 100%;
+  padding: 30px 0;
+  overflow-x: hidden;
+}
+.marquee-context {
+  text-align: center;
+  overflow: hidden;
+}
+
+marquee {
+  background: var(--primary-color);
+  margin-top: 50px;
+}
+.newes {
+  /* margin-top: 40px; */
+  padding: 10px 0;
+  gap: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.news1 {
+  display: flex;
+  gap: 15px;
+  text-align: center;
+  padding: 4px;
+  color: white;
+  font-size: 18px;
+  border: 1px solid;
+  box-shadow: 1px 1px 5px 1px white;
+  border-radius: 7px;
+}
+.news1 img {
+  width: 40px;
+}
+
+/* Our Stories --------->>>>>*/
 
 #our-stories {
   position: relative;
@@ -335,13 +379,12 @@ footer {
   font-size: 16px;
   line-height: 40px;
 }
-.social-media{
-    margin-top: 20px;
-
+.social-media {
+  margin-top: 20px;
 }
 
-.icons{
-    width: 35px;
+.icons {
+  width: 35px;
 }
 
 /* Mobile responsive --------->>> */
@@ -458,7 +501,7 @@ footer {
     top: -33px;
   }
   /* Footer ------->>> */
-  .footer-context{
+  .footer-context {
     flex-direction: column;
     gap: 30px;
   }
