--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,14 @@
 .section-title {
   font-size: 46px;
 }
+
+.hover {
+  transition: transform 0.5s ease;
+}
+
+.hover:hover {
+  transform: scale(1.03);
+}
 /* Header ------------>>> */
 header {
   position: relative;
@@ -79,6 +87,24 @@ nav {
   text-decoration: none;
   font-weight: 600;
   color: var(--primary-color);
+  transition: all 0.4s ease;
+}
+.menu-link::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background-color: var(--primary-color);
+  transition: width 0.4s ease;
+}
+.menu-link:hover::after {
+  width: 100%;
+}
+.menu-link:hover {
+  transform: scale(1.1);
+  
 }
 
 .menu-link:nth-child(2) {
@@ -175,6 +201,7 @@ nav {
   background: white;
   background-image: linear-gradient(#85ffbe69 2%, #fffb7d0e 20%);
 }
+
 .curriculum:nth-child(2) {
   /* background-color: #21d4fd; */
   background-image: linear-gradient(#b921ff5d 2%, #21d5fd13 20%);
@@ -221,6 +248,14 @@ nav {
   padding: 8px;
   clip-path: circle();
   background-color: var(--primary-color);
+}
+
+.navigation-hover {
+  transition: all 0.3s ease;
+}
+
+.navigation-hover:hover {
+  transform: scale(1.08);
 }
 
 /* Updates ------->>>> */
